# md2loader-sdl3

./: CMakeLists.txt  Makefile  README.md  md2loader-glfw.vcxproj
shaders/: basic.vert
src/: Md2.cpp  Md2.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TgaLoader.cpp  TgaLoader.h  main.cpp
